//
//  ToDoUITests.m
//  ToDoUITests
//
//  Created by Neil de Carteret on 14/08/2016.
//  Copyright © 2016 Neil de Carteret. All rights reserved.
//

#import <XCTest/XCTest.h>

@interface ToDoUITests : XCTestCase

@end

@implementation ToDoUITests

- (void)setUp {
    [super setUp];
    
    // Put setup code here. This method is called before the invocation of each test method in the class.
    
    // In UI tests it is usually best to stop immediately when a failure occurs.
    self.continueAfterFailure = NO;
    // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
    XCUIApplication *app = [[XCUIApplication alloc] init];
    [app setLaunchArguments:@[@"--kill-them-all"]];
    [app launch];
    
    // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
}

- (void)tearDown {
    // Put teardown code here. This method is called after the invocation of each test method in the class.
    [super tearDown];
}

- (void)testExample {
    // Use recording to get started writing UI tests.
    // Use XCTAssert and related functions to verify your tests produce the correct results.
    XCUIApplication *app = [[XCUIApplication alloc] init];
    XCUIElementQuery *rowQuery = [app descendantsMatchingType:XCUIElementTypeCell];
    NSUInteger firstCount = rowQuery.count;
    [app.buttons[@"Add"] tap];
    XCUIElement *textField = app.textFields[@"Title"];
    [textField typeText:@"hello"];
    [app.buttons[@"Save"] tap];
    NSUInteger secondCount = rowQuery.count;
    XCTAssert(secondCount > firstCount, @"Row was not added");
}

@end
